@@ -1,0 +1,14 @@
+[PRIORITY]
+Priority=Normal
+
+[TEKKEN_GAME]
+Path=
+
+[SIZE_SETTINGS]
+SizeChoice=FULLSCREEN
+
+[LAST_UPDATE]
+LastUpdated=
+
+[MUTE_SOUND]
+Mute=0
